<resources>
    <string name="app_name">MyTerms</string>
    <string name="term_list">Term List</string>
    <string name="new_term">New Term</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="error">error</string>
    <string name="end_date">End Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete_term_error_message">You can not delete a term that still has courses in it. What would you like to do?</string>
    <string name="move_courses_message">Where would you like to move the courses to?</string>
    <string name="keep_term">Keep Term</string>
    <string name="move_courses">Move Courses</string>
    <string name="delete_courses">Delete Courses</string>
    <string name="confirm">Confirm</string>
    <string name="term_title">Term Title</string>
    <string name="start_and_end_dates">Start and End Dates</string>
    <string name="new_course">New Course</string>
    <string name="edit_term">Edit Term</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="term_credits_display_default">Credits: 0/0</string>
    <string name="course_credits_display_default">Credits: 0</string>
    <string name="term">Term</string>
    <string name="mentors">Mentors</string>
    <string name="credits">Credits</string>
    <string name="credits_">Credits:</string>
    <string name="new_mentor">New Mentor</string>
    <string name="select_mentors">Select Mentors</string>
    <string name="select_term">Select Term</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="courses">Courses</string>
    <string name="course_view">Course View</string>
    <string name="mentor_label">Mentor: </string>
    <string name="mentors_label">Mentors: </string>
    <string name="objectives">Objectives</string>
    <string name="performances">Performances</string>
    <string name="objective_assessments">Objective Assessments</string>
    <string name="performance_assessments">Performance Assessments</string>
    <string name="assessments">Assessments</string>
    <string name="notes">Notes</string>
    <string name="objective_name">Objective Name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="passed">[PASSED]</string>
    <string name="add_performance">Add performance</string>
    <string name="add_objective">Add Objective</string>
    <string name="add_note">Add Note</string>
    <string name="separator">Separator</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="phone_number_place_holder">123–555–6789</string>
    <string name="email_address_place_holder">first_last@url.com</string>
    <string name="close_mentor_view">Close Mentor View</string>
    <string name="performance_name">Performance Name</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="course_title">Course Title</string>
    <string name="view_all">View All</string>
    <string name="view_active">View Active</string>
    <string name="status_display">Status:</string>
    <string name="status">Status</string>
    <string name="status_completed">Completed</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_plan_to_take">Plan to Take</string>
    <string name="status_dropped">Dropped</string>
    <string name="change_status_to">Change status to:</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="plan_to_take">Plan to Take</string>
    <string name="dropped">Dropped</string>
    <string name="label">Label</string>
    <string name="display">Display</string>
    <string name="textbox">Textbox</string>
    <string name="new_objective">New Objective</string>
    <string name="edit_objective">Edit Objective</string>
    <string name="description">Description</string>
    <string name="new_performance">New Performance</string>
    <string name="edit_performance">Edit Performance</string>
    <string name="new_assessment">New Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="message">Message</string>
    <string name="course">Course</string>
    <string name="not_complete">Not Complete</string>
    <string name="restore">Restore</string>
    <string name="drop">Drop</string>
    <string name="select_terms">Select Terms</string>
    <string name="selected_background">selected background</string>
    <string name="completion_date">Completion Date</string>
    <string name="icon">icon</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="options">Options</string>
    <string name="delete_this_assessment">Delete this assessment?</string>
    <string name="delete_this_note">Delete this note?</string>
    <string name="please_select_the_course_status">Please select the course status:</string>
    <string name="in_progress_">In Progress: </string>
    <string name="plan_to_take_">Plan to Take: </string>
    <string name="completed_">Completed: </string>
    <string name="dropped_">Dropped: </string>
    <string name="incomplete_">Incomplete: </string>
    <string name="zero">0</string>
    <string name="course_completion_display">You have completed 0.00% of your courses.</string>
    <string name="assessment_completion_display">You have completed 0.00% of your assessments.</string>
    <string name="complete_">Complete:</string>
    <string name="upcoming_terms_">Upcoming Terms:</string>
    <string name="upcoming_courses_">Upcoming Courses:</string>
    <string name="upcoming_assessments_">Upcoming Assessments:</string>
    <string name="current_term">Current Term</string>
    <string name="all_terms">All Terms</string>
    <string name="progress_tracker">Progress Tracker</string>
    <string name="load_example_database">Load Example Database</string>
    <string name="scheduler">Scheduler</string>
    <string name="no_upcoming_terms_message">No upcoming terms within the next 30 days.</string>
    <string name="no_upcoming_courses_message">No upcoming courses within the next 30 days.</string>
    <string name="no_upcoming_assessments_message">No upcoming assessments within the next 30 days.</string>
    <string name="tracker">Tracker</string>
    <string name="progress_and_upcoming">Progress and Upcoming</string>
</resources>
