<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tracker.TrackerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/root_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_tracker"
            android:textSize="@dimen/header_text_size" />

        <!-- COURSE INFO -->
        <TextView
            android:id="@+id/course_header"
            android:text="@string/courses"
            android:textSize="@dimen/sub_header_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:id="@+id/course_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/course_in_progress_label"
                android:text="@string/in_progress_"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="@dimen/tracker_col_0_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_in_progress_display"
                android:text="@string/zero"
                android:layout_row="0"
                android:layout_column="1"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/tracker_col_1_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_plan_to_take_label"
                android:text="@string/plan_to_take_"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="@dimen/tracker_col_0_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_plan_to_take_display"
                android:text="@string/zero"
                android:layout_row="1"
                android:layout_column="1"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/tracker_col_1_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_completed_label"
                android:text="@string/completed_"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="@dimen/tracker_col_0_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_completed_display"
                android:text="@string/zero"
                android:layout_row="2"
                android:layout_column="1"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/tracker_col_1_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_dropped_label"
                android:text="@string/dropped_"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_width="@dimen/tracker_col_0_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/course_dropped_display"
                android:text="@string/zero"
                android:layout_row="3"
                android:layout_column="1"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/tracker_col_1_width"
                android:layout_height="wrap_content" />

        </GridLayout>

        <TextView
            android:id="@+id/course_completion_display"
            android:text="@string/course_completion_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- ASSESSMENT INFO -->
        <TextView
            android:id="@+id/assessment_header"
            android:text="@string/assessments"
            android:textSize="@dimen/sub_header_text_size"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:id="@+id/assessment_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/assessment_incomplete_label"
                android:text="@string/incomplete_"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="@dimen/tracker_col_0_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/assessment_incomplete_display"
                android:text="@string/zero"
                android:layout_row="0"
                android:layout_column="1"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/tracker_col_1_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/assessment_complete_label"
                android:text="@string/complete_"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="@dimen/tracker_col_0_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/assessment_complete_display"
                android:text="@string/zero"
                android:layout_row="1"
                android:layout_column="1"
                android:textAlignment="textEnd"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/tracker_col_1_width"
                android:layout_height="wrap_content" />

        </GridLayout>

        <TextView
            android:id="@+id/assessment_completion_display"
            android:text="@string/assessment_completion_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/scheduler"
            android:textSize="@dimen/header_text_size" />

        <!-- UPCOMING TERMS -->
        <TextView
            android:id="@+id/upcoming_terms_label"
            android:text="@string/upcoming_terms_"
            android:textSize="@dimen/sub_header_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/no_upcoming_terms_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_upcoming_terms_message"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_terms_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- UPCOMING COURSES -->
        <TextView
            android:id="@+id/upcoming_courses_label"
            android:text="@string/upcoming_courses_"
            android:textSize="@dimen/sub_header_text_size"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/no_upcoming_courses_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_upcoming_courses_message"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_courses_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- UPCOMING ASSESSMENTS -->
        <TextView
            android:id="@+id/upcoming_assessments_label"
            android:text="@string/upcoming_assessments_"
            android:textSize="@dimen/sub_header_text_size"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/no_upcoming_assessments_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_upcoming_assessments_message"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_assessments_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>