<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".course.CourseViewActivity">

    <RelativeLayout
        android:padding="@dimen/root_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_display"
            android:text="@string/course_view"
            android:textSize="@dimen/header_text_size"
            android:layout_toStartOf="@id/edit_course_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date_display"
            android:text="@string/start_and_end_dates"
            android:layout_toStartOf="@id/edit_course_button"
            android:layout_below="@id/title_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/mentor_list"
            app:flexWrap="wrap"
            app:alignItems="stretch"
            app:alignContent="stretch"
            android:layout_below="@id/date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/mentor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/credits_display"
            android:text="@string/course_credits_display_default"
            android:layout_below="@id/mentor_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status_display"
            android:text="@string/status_display"
            android:layout_below="@id/credits_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/completed_icon"
            android:src="@drawable/ic_status_complete"
            android:contentDescription="@string/complete"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/in_progress_icon"
            android:src="@drawable/ic_status_in_progress"
            android:contentDescription="@string/in_progress"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/plan_to_take_icon"
            android:src="@drawable/ic_status_plan_to_take"
            android:contentDescription="@string/plan_to_take"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/dropped_icon"
            android:src="@drawable/ic_status_dropped"
            android:contentDescription="@string/dropped"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/edit_course_button"
            android:src="@drawable/ic_edit"
            android:background="@android:color/transparent"
            android:onClick="editCourse"
            android:contentDescription="@string/edit_course"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/separator"
            android:layout_below="@id/status_display"
            android:background="#333"
            android:contentDescription="@string/separator"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <ScrollView
            android:layout_below="@id/separator"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/objective_header"
                    android:text="@string/objective_assessments"
                    android:textSize="@dimen/sub_header_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/create_objective_button"
                    android:onClick="createNewObjective"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/add_objective"
                    android:layout_alignTop="@+id/objective_header"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/objective_recycler"
                    android:layout_below="@id/objective_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/performance_header"
                    android:text="@string/performance_assessments"
                    android:textSize="@dimen/sub_header_text_size"
                    android:layout_below="@id/objective_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/create_performance_button"
                    android:onClick="createNewPerformance"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/add_performance"
                    android:layout_alignTop="@+id/performance_header"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/performance_recycler"
                    android:layout_below="@id/performance_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/note_header"
                    android:text="@string/notes"
                    android:textSize="@dimen/sub_header_text_size"
                    android:layout_below="@id/performance_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/create_note_button"
                    android:onClick="createNewNote"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/add_note"
                    android:layout_alignTop="@+id/note_header"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/note_recycler"
                    android:layout_below="@id/note_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <!-- VIEW MENTOR POPUP -->
    <RelativeLayout
        android:id="@+id/view_mentor_popup"
        android:visibility="gone"
        android:clickable="true"
        android:background="@color/popup_bg_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="#ffffff"
            android:padding="@dimen/root_padding"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mentor_name_display"
                android:text="@string/mentor_name"
                android:textSize="@dimen/header_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mentor_phone_display"
                android:text="@string/phone_number_place_holder"
                android:textSize="@dimen/sub_header_text_size"
                android:layout_below="@id/mentor_name_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mentor_email_display"
                android:text="@string/email_address_place_holder"
                android:textSize="@dimen/sub_header_text_size"
                android:layout_below="@id/mentor_phone_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/close_mentor_button"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/close_mentor_view"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:onClick="closeMentorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_status_popup"
        android:background="@color/popup_bg_mask"
        android:clickable="true"
        android:visibility="gone"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@drawable/bg_dark_rounded"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/select_status_message"
                android:text="@string/please_select_the_course_status"
                android:textSize="@dimen/sub_header_text_size"
                android:textColor="#CCC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@id/select_status_message"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/status_plan_to_take_button"
                    android:text="@string/status_plan_to_take"
                    android:textColor="@color/grey_button_fg"
                    android:background="@drawable/bg_button_grey"
                    android:layout_marginVertical="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/status_in_progress_button"
                    android:text="@string/status_in_progress"
                    android:textColor="@color/blue_button_fg"
                    android:background="@drawable/bg_button_blue"
                    android:layout_marginVertical="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/status_completed_button"
                    android:text="@string/status_completed"
                    android:textColor="@color/green_button_fg"
                    android:background="@drawable/bg_button_green"
                    android:layout_marginVertical="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/status_dropped_button"
                    android:text="@string/status_dropped"
                    android:textColor="@color/red_button_fg"
                    android:background="@drawable/bg_button_red"
                    android:layout_marginVertical="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>